change bg to dark

--- a/label_studio/static/css/main.css
+++ b/label_studio/static/css/main.css
@@ -73,7 +73,7 @@ a {
 }
 
 #header {
-    background-color: #fff;
+    background-color: #0e1111;
     display: flex;
     align-items: center;
     padding: 10px 20px 10px 40px;
@@ -166,7 +166,7 @@ a {
 }
 
 .delim {
-    color: #89ac00;
+    color: #616161;
     margin-right: 1em;
     font-weight: bold;
 }
